# book2audio

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.planning/: STATE.md
research/attribution_proto_20260610/: README.md  eval_easytts_pipeline.py  eval_fusion.py  eval_qwen.py  gold_chat.json  proto_csi.py  proto_rules.py  sample_gold.txt
research/competitor_study_20260612/: REPORT.md
research/tts_compare_20260509/: Dockerfile.tts  INSTALL_COSYVOICE.md  install_tts.sh  requirements.txt  test_chapter1_edge_male.py  test_chapter1_male.py  test_tts_comprehensive.py
src/book2audio/: __init__.py  __main__.py  attribution.py  casting.py  parser.py  pipeline.py  profile.py  report.py  script.py
