[project]
name = "book2audio"
version = "0.1.0"
description = "智能有声书工具 - 将小说TXT转化为多角色有声书"
requires-python = ">=3.9"
dependencies = ["edge-tts>=6.1"]

[project.optional-dependencies]
kokoro = ["kokoro-onnx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/book2audio"]
